# primitive-map-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: basic.rs  bench.rs  library_only.rs
examples/hasher-asm/: Cargo.toml
examples/hasher-asm/src/: main.rs
src/: bench.rs  bucket.rs  hash.rs  kv.rs  lib.rs
src/bucket/: helpers.rs  mod.rs
src/bucket/buckets/: btreemap.rs  mod.rs  option.rs  smallvec.rs  vec.rs
src/bucket/stores/: array.rs  mod.rs  vec.rs
tests/: bench.rs
