[package]
name = "primitivemap"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
documentation = "https://docs.rs/primitivemap"
homepage = "https://github.com/mersinvald/primitive-map-rs"
repository = "https://github.com/mersinvald/primitive-map-rs"
keywords = ["hashmap", "container", "data-structure", "primitive", "integer"]
categories = ["data-structures", "algorithms"]
license = "MIT"
license-file = "LICENSE"
is-it-maintained-issue-resolution = { repository = "https://github.com/mersinvald/primitive-map-rs" }
is-it-maintained-open-issues = { repository = "https://github.com/mersinvald/primitive-map-rs" }

[dependencies]
smallvec = "0.6.1"

[dev-dependencies]
indexmap = "1.0.1"
