[package]
name = "primitivemap"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
description = "blazing fast [Integer -> T: Copy] map"
documentation = "https://docs.rs/primitivemap"
homepage = "https://github.com/mersinvald/primitive-map-rs"
repository = "https://github.com/mersinvald/primitive-map-rs"
keywords = ["hashmap", "container", "data-structure", "primitive", "integer"]
categories = ["data-structures", "algorithms"]
license = "MIT"

[badges]
travis-ci = { repository = "mersinvald/primitive-map-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "https://github.com/mersinvald/primitive-map-rs" }
is-it-maintained-open-issues = { repository = "https://github.com/mersinvald/primitive-map-rs" }

[dependencies]
smallvec = "0.6.1"

[dev-dependencies]
indexmap = "1.0.1"
